--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.15.1",
     "pg": "^8.13.1"
   }
 }
